# ESP32-S3-Touch-LCD-7C

./: .gitignore  README.md  README_CN.md
example/arduino/01_I2C/: 01_I2C.ino
example/arduino/02_RTC/: 02_RTC.ino
example/arduino/03_LCD/: 03_LCD.ino
example/arduino/04_ISOLATION_IO/: 04_ISOLATION_IO.ino
example/arduino/05_SD/: 05_SD.ino
example/arduino/06_TOUCH/: 06_TOUCH.ino
example/arduino/07_DISPLAY_BMP/: 07_DISPLAY_BMP.ino
example/arduino/08_BAT_INFO/: 08_BAT_INFO.ino
example/arduino/10_LVGL_CODEC/: 10_LVGL_CODEC.ino
example/idf/10_LVGL_CODEC/main/: CMakeLists.txt  idf_component.yml
example/idf/10_LVGL_CODEC/main/ui/: user_lv_demo_music_list.c  user_lv_demo_music_list.h  user_lv_demo_music_main.c  user_lv_demo_music_main.h
example/idf/10_LVGL_CODEC/main/ui/assets/: BGM_1.h  For_Elise.h  spectrum.py  user_img_lv_demo_music_btn_list_pause.c  user_img_lv_demo_music_btn_list_play.c  user_img_lv_demo_music_btn_loop.c  user_img_lv_demo_music_btn_next.c  user_img_lv_demo_music_btn_pause.c  user_img_lv_demo_music_btn_play.c  user_img_lv_demo_music_btn_prev.c  user_img_lv_demo_music_btn_rnd.c  user_img_lv_demo_music_corner_left.c  user_img_lv_demo_music_corner_right.c  user_img_lv_demo_music_cover_3.c  user_img_lv_demo_music_icon_1.c  user_img_lv_demo_music_icon_2.c  user_img_lv_demo_music_icon_3.c  user_img_lv_demo_music_icon_5.c  user_img_lv_demo_music_list_border.c  user_img_lv_demo_music_logo.c  user_img_lv_demo_music_slider_knob.c  user_img_lv_demo_music_wave_bottom.c  user_img_lv_demo_music_wave_top.c
schematic/: ESP32-S3-Touch-LCD-7C-BOX-2D.dxf
(+161 files in other folders)
